Fixed the overflow and name of section

--- a/src/app/cdk/side-bar/modals/modal-person-identifiers/modal-person-identifiers.component.scss
+++ b/src/app/cdk/side-bar/modals/modal-person-identifiers/modal-person-identifiers.component.scss
@@ -60,3 +60,8 @@ app-privacy-selector {
   display: inline;
   margin-top: 8px;
 }
+
+.line {
+    overflow-wrap: break-word;
+    word-break: break-word;
+}
